--- a/scss/activityicons.scss
+++ b/scss/activityicons.scss
@@ -1,4 +1,5 @@
 
+img.activityimage,
 img.activityicon {
     width: $activityiconsize;
     height: $activityiconsize;
@@ -41,12 +42,23 @@ img.activityicon {
     max-height: $activityiconsize;
     padding:8px;
 
+    img.activityimage,
     img.activityicon {
         width: $activityiconsize;
         height: $activityiconsize;
         max-width: $activityiconsize;
         max-height: $activityiconsize;
     }
+}
+
+/* disable filtering on resources */
+.activity-wrapper.resource .activity-icon img {
+    filter: none !important;
+}
+
+/* disable filtering on resources in page format */
+.page-module-resource img {
+    filter: none !important;
 }
 
 @if $monochrome == 1 {
@@ -92,4 +104,7 @@ img.activityicon {
         background-color: $brandprimary;
         color: $brandprimaryalt;
     }
+
+    /* force all icons to be white */
+    .activityicon{ filter: brightness(0) invert(100) !important }
 }
