--- a/scss/buttons.scss
+++ b/scss/buttons.scss
@@ -93,11 +93,10 @@ body:not(.path-message) .btn-primary:focus {
 
 .aalink.focus,
 .arrow_link.focus, 
-a:not([class]).focus, 
+/* a:not([class]).focus,  glitch on course titles */
 .activityinstance > a.focus, 
 .aalink:focus, 
 .arrow_link:focus, 
-a:not([class]):focus, 
 .activityinstance > a:focus {
     background-color: transparent;
     box-shadow: none;
